fix accidental paste

--- a/examples/basic.html
+++ b/examples/basic.html
@@ -22,12 +22,20 @@
 	<br><br><br>
 
 	<template component-name="example-component-with-slot">
-		<div>The slot below is going to be replaced by the children of the component:</div>
+		<div>
+			The slot below is going to be 
+			replaced by the children of 
+			the component:
+		</div>
 		<li></li>
 		<slot></slot>
 	</template>
-	<example-component-with-slot>Hi from component 1!</example-component-with-slot>
-	<example-component-with-slot>Hi from component 2!</example-component-with-slot>
+	<example-component-with-slot>
+		Hi from component 1!
+	</example-component-with-slot>
+	<example-component-with-slot>
+		Hi from component 2!
+	</example-component-with-slot>
 </body>
 
 </html>
